# lab8_Parallel_For

./: CMakeLists.txt
Encoder_lib/: CMakeLists.txt  Encoder.cpp  Encoder.h
test/: CMakeLists.txt  test.cpp
